# youi-rust-framework

./: Cargo.toml  LICENSE.txt  README.MD
youi/: Cargo.toml
youi/youi-app-config/: Cargo.toml
youi/youi-app-config/src/: lib.rs  models.rs  schema.rs
youi/youi-core/: Cargo.toml
youi/youi-core/src/: json_render.rs  lib.rs
youi/youi-dataframe/: Cargo.toml
youi/youi-dataframe/src/: lib.rs  script.rs  transform.rs
youi/youi-dataframe/src/lazy/: mod.rs
youi/youi-dataframe/src/sqlite_dataframe/: mod.rs  processor.rs  query.rs
youi/youi-desktop/: Cargo.toml
youi/youi-desktop/src/: main.rs
youi/youi-fs/: Cargo.toml
youi/youi-fs/src/: build.rs  lib.rs  tree.rs
youi/youi-geo/: Cargo.toml
youi/youi-geo/src/: area.rs  cluster.rs  json.rs  lib.rs  query.rs
youi/youi-spider/: Cargo.toml
youi/youi-spider/src/: advance_search.rs  json.rs  lib.rs  task.rs
youi/youi-sqlite/: Cargo.toml
youi/youi-sqlite/src/: lib.rs
