[package]
name = "youi-dataframe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars-core = {version="0.20.0",features=["strings","string_encoding"]}
polars-lazy = {version="0.20.0",features=["csv-file","concat_str"]}
polars-io = {version="0.20.0",features=["csv-file","json"]}
rhai = {version="1.7.0",features=["serde","internals"]}
serde = "1.0"
serde_json = { version = "1"}

dotenv = "0.10"
message-io = "0.14"

sqlx = { version = "0.5", features = ["runtime-async-std-rustls", "sqlite"], optional = true }
async-std = { version = "1.8.0", features = [ "attributes" ] , optional = true}
futures = { version="0.3" ,optional = true}
paw = { version="1.0" ,optional = true}
anyhow={ version="1.0.57" ,optional = true}

[features]
any = []
sqlite_dataframe=["sqlx","async-std","futures","paw","anyhow"]


