[package]
name = "youi-geo"
version = "0.1.1"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
youi-dataframe = {version = "0.1.1",path="../youi-dataframe"}
smartcore = "0.2.0"
geo = "0.20.1"
geojson = "0.23.0"
num-traits = "0.2.14"
serde = "1.0"
serde_json = "1.0"