[package]
name = "youi-spider"
version = "0.1.1"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
youi-dataframe = {version = "0.1.1",path="../youi-dataframe"}
youi-geo = {version = "0.1.1",path="../youi-geo"}
sqlx = { version = "0.5", features = ["sqlite"] }
geo = "0.20.1"
geojson = "0.23.0"
serde_json = "1.0"